@@ -42,6 +42,7 @@ LoadPlugin entropy
 #LoadPlugin exec
 #LoadPlugin hddtemp
 LoadPlugin interface
+#LoadPlugin iptables
 #LoadPlugin ipvs
 LoadPlugin irq
 #LoadPlugin libvirt
@@ -123,6 +124,10 @@ LoadPlugin users
 #<Plugin interface>
 #	Interface "eth0"
 #	IgnoreSelected false
+#</Plugin>
+
+#<Plugin iptables>
+#	Chain "table" "chain"
 #</Plugin>
 
 #<Plugin irq>
